--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_core: ^3.14.0
   firebase_auth: ^5.6.0
   shared_preferences: ^2.5.3
+  cloud_firestore: ^5.6.9
  
 
 dev_dependencies:
