--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   firebase_auth: ^5.6.0
   shared_preferences: ^2.5.3
   cloud_firestore: ^5.6.9
+  geolocator: ^14.0.2
  
 
 dev_dependencies:
