--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,9 @@ dependencies:
   shared_preferences: ^2.5.3
   cloud_firestore: ^5.6.9
   geolocator: ^14.0.2
+  latlong2: ^0.9.1
+  url_launcher: ^6.3.2
+  flutter_map: ^8.1.1
  
 
 dev_dependencies:
